feat(auth): настроил метки updated_at/created_at для разрешения конфликта гонки данных, добавлен раздел reports
